--- a/env.yaml
+++ b/env.yaml
@@ -1,7 +1,7 @@
-BUCKET:csvtestbucket-pjr-13052022
+BUCKET: pjr-bucket-13052022
  
-DATASET:pjr_csvtestdataset
+DATASET: pjr_dataset
  
-TABLE:csvtable
+TABLE: pjr-table
  
-VERSION:v14
+VERSION: v14
